RESOLVED FIXED39065
Can't submit a form with <input type=checkbox required>
https://bugs.webkit.org/show_bug.cgi?id=39065
Summary Can't submit a form with <input type=checkbox required>
Kent Tamura
Reported 2010-05-13 07:24:17 PDT
Open the following HTML: <form action=...> <input type=checkbox name=term required> <input type=submit> </form> check the checkbox, and click the submit button. The form is not submitted though it is valid. Note: - if the default value of the checkbox is "checked", this bug doesn't occur. - .validity.valid and .validity.valueMissing of the checkbox work correctly. The fix will be uploaded soon.
Attachments
Proposed patch (4.30 KB, patch)
2010-05-13 07:41 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-05-13 07:41:22 PDT
Created attachment 55978 [details] Proposed patch
Kent Tamura
Comment 2 2010-05-13 15:33:31 PDT
Comment on attachment 55978 [details] Proposed patch Clearing flags on attachment: 55978 Committed r59390: <http://trac.webkit.org/changeset/59390>
Kent Tamura
Comment 3 2010-05-13 15:33:40 PDT
All reviewed patches have been landed. Closing bug.
Mark Rowe (bdash)
Comment 4 2010-05-14 01:52:54 PDT
Note You need to log in before you can comment on or make changes to this bug.