2010-05-13  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        Can't submit a form with <input type=checkbox required>
        https://bugs.webkit.org/show_bug.cgi?id=39065

        * fast/forms/interactive-validation-required-checkbox-expected.txt: Added.
        * fast/forms/interactive-validation-required-checkbox.html: Added.
2010-05-13  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Can't submit a form with <input type=checkbox required>
        https://bugs.webkit.org/show_bug.cgi?id=39065

        Test: fast/forms/interactive-validation-required-checkbox.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setChecked):
          Update the validity cache when a checkbox state is changed.

git-svn-id: svn://svn.chromium.org/blink/trunk@59390 bbb929c8-8fbe-4397-9dbb-9b2b20218538