third_party/WebKit/WebCore/html/HTMLInputElement.cpp
@@ -1426,6 +1426,7 @@ void HTMLInputElement::setChecked(bool nowChecked, bool sendChangeEvent)
 
     m_useDefaultChecked = false;
     m_checked = nowChecked;
+    setNeedsValidityCheck();
     setNeedsStyleRecalc();
 
     updateCheckedRadioButtons();
